test_scores/negative_dimers/features/P35611.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P35611.pkl.xz